Changes for 2.0.20rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.0.19

2.0.19rc1 was released as 2.0.19 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.19rc1

Bug fixes:
....I..... [ZBX-7108] fixed error when upgrading graph_theme table in proxy database from 1.8 to 2.0 (vso)
.......PS. [ZBX-10819] fixed server/proxy compilation error on Solaris 10 (viktors)

--------------------------------------------------------------------------------
Changes for 2.0.18

2.0.18rc1 was released as 2.0.18 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.18rc1

New features:
A.F....... [ZBX-1357] updated French translation; thanks to Zabbix translators (zalex_ua)

Bug fixes:
....I..... [ZBX-10741] enforced bash usage in mysql.size user parameter configuration script to avoid issues with different default shells; thanks to Timo Lindfors for reporting it (wiper)
........S. [ZBX-10727] fixed timeout being too low when sending configuration data to active proxy (asaveljevs)
........S. [ZBX-10681] fixed loss of trailing whitespace in unquoted function parameters when creating calculated items with low level discovery (wiper)

--------------------------------------------------------------------------------
Changes for 2.0.17

2.0.17rc1 was released as 2.0.17 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.17rc1

New features:
A.F....... [ZBX-1357] updated English (United States), French, Japanese, Korean, Polish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
.......P.. [ZBX-6744] fixed "expression tree is too large (maximum depth 1000)" error when using SQLite3 in a large environment (Sasha)