@@ -1854,8 +1854,8 @@ ROW   |0       |agent.ping                                                      
 ROW   |0       |agent.version                                                                                                  |Version of zabbix_agent(d) running on monitored host. String value. Example of returned value: 1.1                                                                                                                                                     |
 ROW   |0       |kernel.maxfiles                                                                                                |Maximum number of opened files supported by OS.                                                                                                                                                                                                        |
 ROW   |0       |kernel.maxproc                                                                                                 |Maximum number of processes supported by OS.                                                                                                                                                                                                           |
-ROW   |0       |net.dns.record[&lt;ip&gt;,zone,&lt;type&gt;,&lt;timeout&gt;,&lt;count&gt;]                                     |Performs a DNS query. On success returns a character string with the required type of information.                                                                                                                                                     |
-ROW   |0       |net.dns[&lt;ip&gt;,zone,&lt;type&gt;,&lt;timeout&gt;,&lt;count&gt;]                                            |Checks if DNS service is up. 0 - DNS is down (server did not respond or DNS resolution failed), 1 - DNS is up.                                                                                                                                         |
+ROW   |0       |net.dns.record[&lt;ip&gt;,name,&lt;type&gt;,&lt;timeout&gt;,&lt;count&gt;]                                     |Performs a DNS query. On success returns a character string with the required type of information.                                                                                                                                                     |
+ROW   |0       |net.dns[&lt;ip&gt;,name,&lt;type&gt;,&lt;timeout&gt;,&lt;count&gt;]                                            |Checks if DNS service is up. 0 - DNS is down (server did not respond or DNS resolution failed), 1 - DNS is up.                                                                                                                                         |
 ROW   |0       |net.if.collisions[if]                                                                                          |Out-of-window collision. Collisions count.                                                                                                                                                                                                             |
 ROW   |0       |net.if.in[if,&lt;mode&gt;]                                                                                     |Network interface input statistic. Integer value. If mode is missing bytes is used.                                                                                                                                                                    |
 ROW   |0       |net.if.list                                                                                                    |List of network interfaces. Text value.                                                                                                                                                                                                                |
@@ -1945,8 +1945,8 @@ ROW   |7       |kernel.maxfiles                                                 
 ROW   |7       |kernel.maxproc                                                                                                 |Maximum number of processes supported by OS.                                                                                                                                                                                                           |
 ROW   |7       |logrt[file_format,&lt;pattern&gt;,&lt;encoding&gt;,&lt;maxlines&gt;,&lt;mode&gt;]                              |Monitoring of log file with rotation. fileformat - [path][regexp], pattern - regular expression                                                                                                                                                        |
 ROW   |7       |log[file,&lt;pattern&gt;,&lt;encoding&gt;,&lt;maxlines&gt;,&lt;mode&gt;]                                       |Monitoring of log file. pattern - regular expression                                                                                                                                                                                                   |
-ROW   |7       |net.dns.record[&lt;ip&gt;,zone,&lt;type&gt;,&lt;timeout&gt;,&lt;count&gt;]                                     |Performs a DNS query. On success returns a character string with the required type of information.                                                                                                                                                     |
-ROW   |7       |net.dns[&lt;ip&gt;,zone,&lt;type&gt;,&lt;timeout&gt;,&lt;count&gt;]                                            |Checks if DNS service is up. 0 - DNS is down (server did not respond or DNS resolution failed), 1 - DNS is up.                                                                                                                                         |
+ROW   |7       |net.dns.record[&lt;ip&gt;,name,&lt;type&gt;,&lt;timeout&gt;,&lt;count&gt;]                                     |Performs a DNS query. On success returns a character string with the required type of information.                                                                                                                                                     |
+ROW   |7       |net.dns[&lt;ip&gt;,name,&lt;type&gt;,&lt;timeout&gt;,&lt;count&gt;]                                            |Checks if DNS service is up. 0 - DNS is down (server did not respond or DNS resolution failed), 1 - DNS is up.                                                                                                                                         |
 ROW   |7       |net.if.collisions[if]                                                                                          |Out-of-window collision. Collisions count.                                                                                                                                                                                                             |
 ROW   |7       |net.if.in[if,&lt;mode&gt;]                                                                                     |Network interface input statistic. Integer value. If mode is missing bytes is used.                                                                                                                                                                    |
 ROW   |7       |net.if.list                                                                                                    |List of network interfaces. Text value.                                                                                                                                                                                                                |
